fixes broken css

--- a/web/sites/all/themes/bootstrap_onlinekurslabor/css/mobile.css
+++ b/web/sites/all/themes/bootstrap_onlinekurslabor/css/mobile.css
@@ -77,10 +77,6 @@
     padding: 0;
   }
 
-  .view-nm-activity-stream {
-    display: none;
-  }
-
 
   #page_top_navigation {
     position: absolute;
